# atlas-plot-agent

./: .gitignore  README.md  agent-config.yaml  pyproject.toml
.github/workflows/: test-questions.yaml
atlas_plot_agent/: cli.py  datamodel.py  loader.py  plot_driver.py  run_in_docker.py  usage_info.py
design/: 001-design.md  README.md  llm_atlas_analysis_full_report.md
docker/: Dockerfile
notebooks/: 00 - test-code.ipynb  01 - test-btagging-tool.ipynb  02 - Q4-Understaning a failure.ipynb  03 - Q6 Study.ipynb
notebooks/adl-benchmarks/: README.md  analyze-failures.py  copilot-spaces-comments.md  copiolot-spaces.ipynb  direct-query-all.py  direct-query-analysis.ipynb  direct-query-config.yaml  direct-query-error-analysis.ipynb  direct-query.py  direct-question-01.md  direct-question-02.md  direct-question-03.md  direct-question-04.md  direct-question-05.md  direct-question-06.md  direct-question-07.md  direct-question-08.md  disk_cache.py  error_catalog.yaml  hint_files.py  models.py  models.yaml  plan-query-all.py  plan-query-config.yaml  plan-query.py  query-all.py  query-analysis.ipynb  query_code.py  query_config.py  questions.py  utils.py
notebooks/adl-benchmarks/results/direct-query/: analysis.ipynb  direct-question-01.md  direct-question-02.md  direct-question-03.md  direct-question-04.md  direct-question-05.md  direct-question-06.md  direct-question-07.md  direct-question-08.md  results.csv
notebooks/adl-benchmarks/results/plan-query/: analysis.ipynb  plan-question-01.md  results.csv  (+7 more)
tests/: test_loader.py  test_run_in_docker.py  test_usage_info.py
