[project]
name = "atlas-plot-agent"
version = "0.1.0"
description = "A Python package for atlas plot agent."
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
  "openai-agents",
  "typer"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[hatch]